@@ -1,3 +1,9 @@
+2008-02-17  Jaap Haitsma  <jaap@haitsma.org>
+
+	* src/backend.c:
+	* src/netspeed.c:
+	Minor coding style fixes
+
 2008-02-16  Jaap Haitsma  <jaap@haitsma.org>
 
 	* src/netspeed.c: (change_icons), (display_help):
